FirstProjectdevops/src/objects/Expenseold__c.object
<CustomObject>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>client__c</fullName>
        <label>client</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>reimbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>reimbursed</label>
        <type>Checkbox</type>
    </fields>
    <label>Expenseold</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expensesold</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>